--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,11 @@ img.icon-list {
 }
 
 .archive.post-type-archive-tribe_events .tribe-events-tooltip p {
-  font-size: 1rem;
+  font-size: 0.9rem;
+}
+
+.tribe-event-description a.excerpt-read-more {
+	display: block;
 }
 
 
@@ -436,6 +440,10 @@ button.hollow:hover, a.tribe-events-gmap:hover, #tribe-bar-form .tribe-bar-submi
 
 .card .excerpt-read-more {
  float: right;
+}
+
+.tribe-event-description a.excerpt-read-more {
+
 }
 
 .homepage-icon {
