--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -342,6 +342,7 @@ button, .button, input[type="button"], .pagination .button, .tribe-events-notice
 	-webkit-transition: all 300ms;
 	transition: all 300ms;
 	font-size: 1rem;
+  margin: 0.25rem;
 	display: inline-flex;
 }
 
@@ -367,6 +368,7 @@ a.button.hollow, a.excerpt-read-more, a.tribe-events-button, .tribe-common butto
   padding: 0.5rem 1rem;
   margin: 0.25rem;
   font-weight: 700;
+  text-decoration: none;
   display: inline-flex;
 }
 
