--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
 1. WEB FONTS
 *********************/
 
-html, body, h1, h2, h3, h4, h5, p, .tribe-common { font-family: "Inter", sans-serif, "Apple Color Emoji", "Segoe UI Emoji"; }
+html, body, h1, h2, h3, h4, h5, p, .tribe-common { font-family: Roboto,-apple-system,BlinkMacSystemFont,"Helvetica Neue",Oxygen-Sans,"Arial Nova","Segoe UI",Arial,Ubuntu,Cantarell,sans-serif; }
 
 :root {
 	--color-black: #0a0a0a;
@@ -311,7 +311,7 @@ margin: 4rem 0 3rem 0;
     border-radius: 50%;
     padding: .25rem;
     margin: .25rem;
-    font-size: 3rem;
+    font-size: 2rem;
     display: inline-flex;
     box-shadow: none;
     border: 1px solid var(--color-red);
@@ -491,12 +491,24 @@ button.dark, .button.dark, .pagination .button.current {
   line-height: 1.58;
 }
 
+.blog-post {
+	margin-top: 5rem;
+}
+
 .blog-post h1 {
-  margin: 10rem 0 5rem;
+  margin: 0 0 5rem;
+}
+
+.post-divider {
+	margin: 0 1rem;
 }
 
 #content #inner-content .post p.byline {
   color:  rgba (0,0,0,0.6);
+}
+
+.dsa-share {
+	text-align: right;
 }
 
 #content #inner-content .category-minutes h2 {
